# ChangeLog for dev-ruby/culerity
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*culerity-0.2.10 (23 Jul 2010)

  23 Jul 2010; Hans de Graaff <graaff@gentoo.org> +culerity-0.2.10.ebuild,
  +metadata.xml:
  Initial import. Dependency for capybara.
