@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST culerity-0.2.10.gem 56832 RMD160 c0b119705205a1df35b04761319294c0de9b0de9 SHA1 aff72d4e1a9ccb7f0966c5d3aac526049f7465b9 SHA256 83422fa67e4bc5a7313f52193bbaff2867820d47910be7bee57ee1eb42d1fac3
+DIST culerity-0.2.12.gem 57344 RMD160 1fa7124eab639efd7b2653185407b13e3111d27e SHA1 758c6762122f53e48f0143e1952905d9fc4153e1 SHA256 725f3b0cb78d29e58e358368c72a8a655224f822d795c025b746a665e6ce0cab
 EBUILD culerity-0.2.10.ebuild 873 RMD160 4bd3436a359a77478ab9a076b54a981cc9ab58ff SHA1 a1b912a29d5612c2adeb0a85b45d5f7d0175daa9 SHA256 e44672ae7be786626ced60389c15155b4d5f7781375e5d2a5b874ed88442f8f3
-MISC ChangeLog 286 RMD160 06734952edda77181eb4f36f48cdbbff5c1fe9ed SHA1 a2ace99d39165f9b9420ee8fa25073b8db56568e SHA256 d42b3853a8c8f51168cf15f83f338a518a689cb88fd2d25f857980128c0e645b
+EBUILD culerity-0.2.12.ebuild 873 RMD160 4bd3436a359a77478ab9a076b54a981cc9ab58ff SHA1 a1b912a29d5612c2adeb0a85b45d5f7d0175daa9 SHA256 e44672ae7be786626ced60389c15155b4d5f7781375e5d2a5b874ed88442f8f3
+MISC ChangeLog 410 RMD160 56d74af4e10d18e9237e0a441228c35ff3c2d7aa SHA1 b7b527252a31eec40b01dd26248ac0ccfff01569 SHA256 ae17775bd4da863ccd34e439325e80c828536da6aad967516073fc9eb0aad483
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxJev8ACgkQZihJkut28SuPnwEAv+tdEjFwMaKe6AM+1NDoZJXf
-OnEY1nUBpaJDi9SVXEIBAMdt/s8MaEoZTWrOVk31jC40tmXBdTXxQXB30cFZUAtL
-=N0W4
+iF4EAREIAAYFAkybYloACgkQZihJkut28SvDrAEAr8h+XKFWQgN2x60W3LNqoQqt
+j9sMvZZHid5eTWZSYM0A/3mn4SLHCnDPQQUZqNZXkxb4c8V5CUp++QE3xAHk4sjq
+=dTLd
 -----END PGP SIGNATURE-----
